<resources>
    <string name="app_name">Movie</string>
    <string name="movie_poster_desc_txt">Movie poster</string>
    <string name="popular_txt">Popular</string>
    <string name="top_rated_txt">Top Rated</string>
    <string name="release_date_txt">Release Date:</string>
    <string name="user_rating_txt">User Rating:</string>
    <string name="default_txt">No Data found</string>
    <string name="trailers_headline_txt">Trailers</string>
    <string name="trailer_img_desc">Trailer Image</string>
    <string name="review_headline_text">Reviews</string>
    <string name="favourite_txt">Favourites</string>
    <string name="mark_fav">Mark as Favourite</string>
    <string name="un_mark_fav">Remove from Favourite</string>
</resources>
